# curatables

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MEMORY.md  README.md  SECURITY.md  curatables-cli.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-image.yml  ci.yml
app/: __init__.py  config.py  constants.py  dependencies.py  logging_config.py  main.py  template_utils.py
app/backends/: base.py  ytdlp.py
app/db/: connection.py  migrator.py  schema.py  schema.sql
app/middleware/: __init__.py  body_size.py  csrf.py  prometheus.py  request_id.py
app/models/: __init__.py  channel.py  comment.py  event.py  profile.py  source.py  tag.py  video.py  viewer.py
app/repositories/: __init__.py  base.py  channel_repo.py  comment_repo.py  event_repo.py  override_repo.py  profile_channel_video_repo.py  profile_repo.py  reaction_repo.py  source_repo.py  tag_repo.py  video_repo.py
app/services/: auth.py  channels.py  comments.py  content.py  csrf.py  embeds.py  events.py  ids.py  kid_library.py  mdns.py  media_probe.py  metrics.py  normalize.py  profiles.py  rate_limit.py  reactions.py  relocation.py  sharing.py  stats.py  storage.py  storage_report.py  thumbnails.py  updates.py  (+2 more)
docs/: README.md  architecture.md  backup.md  dependencies.md  deployment.md  filtered-search-and-proxy.md  getting-started.md  open-source-media-center-features.md  prd.md  search-research-playlists-at.md  threat-model.md  ui-and-playback-plan.md  upgrade.md  v0.6-safety-agent.md
pi-gen/: README.md  build.sh  config
scripts/: backup.sh  check_codecs.sh  firstboot.sh  install.sh  metrics.sh  restore.sh  updater.sh
systemd/: curatables-backup.service  curatables-backup.timer  curatables-firstboot.service  curatables-updater.path  curatables-updater.service  curatables.service
tests/: conftest.py  test_body_size.py  test_cache_eviction.py  test_comments.py  test_config.py  test_csrf.py  test_dashboard.py  test_embeds.py  test_file_management.py  test_healthz.py  test_ids.py  test_kid_js_es3.py  test_kid_library.py  test_kid_uploads.py  test_logging_format.py  test_mdns.py  test_metrics.py  test_migrator.py  test_normalize.py  test_parent_auth_routes.py  test_parent_library_toggle.py  test_parent_profiles_routes.py  test_rate_limit.py  test_repositories.py  test_request_id.py  test_routes.py  test_services.py  test_sharing.py  test_smoke_e2e.py  test_startup.py  test_storage_report.py  test_template_response_signature.py  test_updates.py  test_uploads.py  test_video_source_service.py
(+75 files in other folders)
